--- a/app/src/main/res/layout/song_list_layout.xml
+++ b/app/src/main/res/layout/song_list_layout.xml
@@ -1,35 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="62dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/ListName"
-                android:layout_width="wrap_content"
-                android:layout_height="45dp"
-                android:layout_margin="15dp"
-                android:ellipsize="marquee"
-                android:marqueeRepeatLimit="marquee_forever"
-                android:scrollHorizontally="true"
-                android:singleLine="true"
-                android:text="ListName"
-                android:textSize="25dp" />
-
-            <Button
-                android:id="@+id/deleteList"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="delete list" />
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+    <TextView
+        android:id="@+id/listName"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Playlist Name"
+        android:textColor="@color/teal_200" />
 </LinearLayout>
