--- a/app/src/main/res/layout/song_name_layout.xml
+++ b/app/src/main/res/layout/song_name_layout.xml
@@ -7,37 +7,42 @@
 
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
+        android:layout_width="400dp"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
+        android:clickable="false"
         app:cardCornerRadius="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:clickable="false"
             android:orientation="horizontal"
             android:padding="8dp">
 
             <ImageView
                 android:layout_width="45dp"
                 android:layout_height="45dp"
-                android:src="@drawable/music_icon"
-                android:layout_marginRight="20dp"/>
+                android:layout_marginRight="20dp"
+                android:clickable="false"
+                android:src="@drawable/music_icon" />
 
 
             <TextView
                 android:id="@+id/SongName"
                 android:layout_width="wrap_content"
                 android:layout_height="45dp"
-                android:text="Song Name"
-                android:textSize="25dp"
-                android:singleLine="true"
-                android:marqueeRepeatLimit="marquee_forever"
+                android:clickable="false"
                 android:ellipsize="marquee"
-                android:scrollHorizontally="true" />
+                android:marqueeRepeatLimit="marquee_forever"
+                android:scrollHorizontally="true"
+                android:singleLine="true"
+                android:text="Song Name"
+                android:textSize="25dp" />
 
 
         </LinearLayout>
+
     </androidx.cardview.widget.CardView>
 
 
