--- a/app/src/main/res/layout/song_list_layout.xml
+++ b/app/src/main/res/layout/song_list_layout.xml
@@ -4,12 +4,28 @@
     android:layout_height="match_parent"
     android:orientation="horizontal">
 
-
-    <TextView
-        android:id="@+id/listName"
-        android:layout_width="fill_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Playlist Name"
-        android:textColor="@color/teal_200" />
+        android:clickable="false"
+        android:orientation="horizontal"
+        android:padding="8dp">
+
+        <TextView
+            android:id="@+id/listName"
+            android:layout_width="fill_parent"
+            android:layout_height="45dp"
+            android:layout_gravity="center"
+            android:background="@color/black"
+            android:clickable="false"
+            android:gravity="center"
+            android:scrollHorizontally="true"
+            android:text="Playlist Name"
+            android:textColor="@color/lime"
+            android:textSize="25dp" />
+
+
+
+    </LinearLayout>
+
 </LinearLayout>
