--- a/app/src/main/res/layout/song_name_layout.xml
+++ b/app/src/main/res/layout/song_name_layout.xml
@@ -7,7 +7,7 @@
 
 
     <androidx.cardview.widget.CardView
-        android:layout_width="400dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:clickable="false"
@@ -25,7 +25,7 @@
                 android:layout_height="45dp"
                 android:layout_marginRight="20dp"
                 android:clickable="false"
-                android:src="@drawable/music_icon" />
+                android:src="@drawable/hudbaikonka" />
 
 
             <TextView
