--- a/app/src/main/res/layout/song_name_layout.xml
+++ b/app/src/main/res/layout/song_name_layout.xml
@@ -30,7 +30,7 @@
 
             <TextView
                 android:id="@+id/SongName"
-                android:layout_width="wrap_content"
+                android:layout_width="308dp"
                 android:layout_height="45dp"
                 android:clickable="false"
                 android:ellipsize="marquee"
