--- a/app/src/main/res/layout/activity_song_list.xml
+++ b/app/src/main/res/layout/activity_song_list.xml
@@ -31,7 +31,7 @@
         android:layout_marginTop="48dp"
         android:layout_marginEnd="12dp"
         android:backgroundTint="@color/black"
-        android:text="NASPAT" />
+        android:text="SKLADBY" />
 
     <ListView
         android:id="@+id/simpleListView"
