--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -10,23 +10,35 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="7"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
         <Button
             android:id="@+id/moznosti"
-            android:layout_width="72dp"
-            android:layout_height="44dp"
+            android:layout_width="101dp"
+            android:layout_height="match_parent"
             android:text="+"
             android:textSize="20sp" />
 
         <Button
             android:id="@+id/favourite"
-            android:layout_width="72dp"
-            android:layout_height="wrap_content"
+            android:layout_width="192dp"
+            android:layout_height="match_parent"
             android:text="❤" />
+
+        <Button
+            android:id="@+id/timeButton"
+            android:layout_width="99dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="⏰" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="7"
+        android:gravity="center"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/SongTxt"
@@ -133,7 +145,7 @@
                 android:layout_height="40dp"
                 android:layout_marginTop="20dp"
                 android:layout_toRightOf="@id/BtnNext"
-                android:background="@drawable/forwardtime"/>
+                android:background="@drawable/forwardtime" />
 
             <ImageButton
                 android:id="@+id/BtnFastRewind"
@@ -141,7 +153,7 @@
                 android:layout_height="40dp"
                 android:layout_marginTop="20dp"
                 android:layout_toLeftOf="@id/BtnPrevious"
-                android:background="@drawable/rewindtime"/>
+                android:background="@drawable/rewindtime" />
 
 
         </RelativeLayout>
